second iteration of lab

--- a/index.html
+++ b/index.html
@@ -7,84 +7,85 @@
 </head>
 <body>
   <h1> My Checkers Game </h1>
-  <p> by *Insert Name* <p>
-    <div id="board">
-      <div class="cell">
-        <div class = "team1"> </div>
+  <h2 class = "subtitle"> ~The Best Game Ever~ </h2>
+  <p> by *Insert Name* </p>
+    <div id="board" class = "cell">
+      <div class = "cell" >
+        <img src="red.jpg"></img>
       </div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team1"> </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <img src="red.jpg"></img>
       </div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team1"> </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <img src="red.jpg"></img>
       </div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team1"> </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <img src="red.jpg"></img>
       </div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team1"> </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <img src="red.jpg"></img>
       </div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team1"> </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <img src="red.jpg"></img>
       </div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team1"> </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <img src="red.jpg"></img>
       </div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team2"> </div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <div></div>
       </div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team2"> </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <div></div>
       </div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team2"> </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <div></div>
       </div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team2"> </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <div></div>
       </div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team2"> </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <div></div>
       </div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team2"> </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <div></div>
       </div>
-      <div class="cell"></div>
-      <div class="cell">
-        <div class = "team2"> </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <div></div>
       </div>
     </div>
     <p> Thank you for visiting my page! Hope you liked my game :)</p>
