--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@
   <p> by *Insert Name* </p>
     <div id="board" class = "cell">
       <div class = "cell" >
-        <img src="red.jpg"></img>
+        <img src="red.jpg">
       </div>
       <div class = "cell"></div>
       <div class = "cell">
-        <img src="red.jpg"></img>
+        <img src="red.jpg">
       </div>
       <div class = "cell"></div>
       <div class = "cell">
-        <img src="red.jpg"></img>
+        <img src="red.jpg">
       </div>
       <div class = "cell"></div>
       <div class = "cell">
-        <img src="red.jpg"></img>
+        <img src="red.jpg">
       </div>
       <div class = "cell"></div>
       <div class = "cell">
-        <img src="red.jpg"></img>
+        <img src="red.jpg">
       </div>
       <div class = "cell"></div>
       <div class = "cell">
-        <img src="red.jpg"></img>
+        <img src="red.jpg">
       </div>
       <div class = "cell"></div>
       <div class = "cell">
-        <img src="red.jpg"></img>
+        <img src="red.jpg">
       </div>
       <div class = "cell"></div>
       <div class = "cell"></div>
