Self-closing image tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
   <p> by *Insert Name* </p>
     <div id="board" class = "cell">
       <div class = "cell" >
-        <img src="red.jpg">
+        <img src="red.jpg" />
+      </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <img src="red.jpg" />
+      </div>
+      <div class = "cell"></div>
+      <div class = "cell">
+        <img src="red.jpg" />
       </div>
       <div class = "cell"></div>
       <div class = "cell">
@@ -19,23 +27,15 @@
       </div>
       <div class = "cell"></div>
       <div class = "cell">
-        <img src="red.jpg">
+        <img src="red.jpg" />
       </div>
       <div class = "cell"></div>
       <div class = "cell">
-        <img src="red.jpg">
+        <img src="red.jpg" />
       </div>
       <div class = "cell"></div>
       <div class = "cell">
-        <img src="red.jpg">
-      </div>
-      <div class = "cell"></div>
-      <div class = "cell">
-        <img src="red.jpg">
-      </div>
-      <div class = "cell"></div>
-      <div class = "cell">
-        <img src="red.jpg">
+        <img src="red.jpg" />
       </div>
       <div class = "cell"></div>
       <div class = "cell"></div>
